cluster/monitoring/victoria-stack/victoria-logs/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: victoria-logs-networkpolicy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: code-server
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: healthchecks
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: orrery
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pharos
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vector
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-logs
    ports:
    - port: 9428
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 9428
      protocol: TCP
